feat(management): crud with product group  (#213)