@@ -7,12 +7,15 @@ import com.e.store.product.exceptions.BadRequestException;
 import com.e.store.product.exceptions.EntityNotFoundException;
 import com.e.store.product.repositories.IProductGroupRepository;
 import com.e.store.product.services.IProductGroupService;
+import com.e.store.product.viewmodel.req.ProductGroupCreateReqVm;
+import com.e.store.product.viewmodel.req.ProductGroupUpdateReqVm;
 import com.e.store.product.viewmodel.res.CommonProductResVm;
 import com.e.store.product.viewmodel.res.PagingResVm;
 import com.e.store.product.viewmodel.res.ProductGroupResVm;
 import com.e.store.product.viewmodel.res.ResVm;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -39,19 +42,23 @@ public class ProductGroupServiceImpl implements IProductGroupService {
   }
 
   @Override
-  public ResponseEntity<ResVm> createNewGroup(String groupName) {
-    if (iProductGroupRepository.existsByName(groupName)) {
-      throw new BadRequestException(groupName + " already exists");
+  public ResponseEntity<ResVm> createNewGroup(ProductGroupCreateReqVm groupData) {
+    if (iProductGroupRepository.existsByName(groupData.name())) {
+      throw new BadRequestException(
+          "Product Group Name: %s already exists".formatted(groupData.name()));
     }
-    LOG.info("createNewGroup: create new group with name: " + groupName);
+    LOG.info("createNewGroup: create new group with name: {}", groupData.name());
     ProductGroup productGroup = new ProductGroup();
-    productGroup.setName(groupName);
+    productGroup.setName(groupData.name());
+    productGroup.setDescription(groupData.description());
     productGroup.setStatus(Status.ENABLED);
 
     iProductGroupRepository.save(productGroup);
 
     ResVm resVm =
-        new ResVm(HttpStatus.CREATED, "Create new group with name: " + groupName + " successfully");
+        new ResVm(
+            HttpStatus.CREATED,
+            "Create new group with name: " + groupData.name() + " successfully");
     LOG.info(resVm.getLogMessage());
     return ResponseEntity.status(HttpStatus.CREATED).body(resVm);
   }
@@ -74,38 +81,20 @@ public class ProductGroupServiceImpl implements IProductGroupService {
   }
 
   @Override
-  public ResponseEntity<ResVm> updateProductGroup(String newName, String groupId) {
+  public ResponseEntity<ResVm> updateProductGroup(ProductGroupUpdateReqVm data) {
     LOG.info("Receive request to update name of product group");
 
-    ProductGroup oldGroup = getProductGroup(groupId);
+    ProductGroup oldGroup = getProductGroup(data.id());
 
-    oldGroup.setName(newName);
+    oldGroup.setName(data.name());
+    oldGroup.setDescription(data.description());
+    Status newStatus = Objects.equals(data.status(), "ENABLED") ? Status.ENABLED : Status.DISABLED;
+    oldGroup.setStatus(newStatus);
     this.iProductGroupRepository.save(oldGroup);
 
-    ResVm res = new ResVm(HttpStatus.OK, "Update product group successfully!");
-    LOG.info(res.getLogMessage());
-
-    return ResponseEntity.status(200).body(res);
-  }
-
-  @Override
-  public ResponseEntity<ResVm> disableEnableGroup(String groupId, String action) {
-    LOG.info("Receive request to disable/enable product group");
-    ProductGroup oldGroup = getProductGroup(groupId);
-    ResVm res;
-
-    if (Status.ENABLED.toString().toLowerCase().equals(action)) {
-      oldGroup.setStatus(Status.ENABLED);
-      res = new ResVm(HttpStatus.OK, "Enable product group successfully!");
-    } else if (Status.DISABLED.toString().toLowerCase().equals(action)) {
-      oldGroup.setStatus(Status.DISABLED);
-      res = new ResVm(HttpStatus.OK, "Disable product group successfully!");
-    } else {
-      throw new BadRequestException(
-          String.format("Cannot update group with status %s. Action not valid", action));
-    }
-
-    this.iProductGroupRepository.save(oldGroup);
+    ResVm res =
+        new ResVm(
+            HttpStatus.OK, "Update product group name: %s successfully!".formatted(data.name()));
     LOG.info(res.getLogMessage());
 
     return ResponseEntity.status(200).body(res);
